<resources>
    <string name="app_name">Flirtyz</string>
    <string name="action_settings">Settings</string>
    <string name="action_suggest">Suggest</string>
    <string name="one">Category</string>
    <string name="two">Favorite</string>
    <string name="three">Recent</string>
    <string name="title_activity_main">Flirtyz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile_name">Flirtyz Emojicons</string>
    <string name="profile_email">support@flirtyz.com</string>

    <string name="select_version">Please select version</string>
    <string name="free_version"><u>Free</u></string>
    <string name="unlocked_version"><u>Unlocked</u></string>
    <string name="flirtyz_emojicons">Flirtyz Emojicons</string>

    <string name="welcome_flirtyz_naughty">Flirtyz Naughty</string>
    <string name="welcome_flirtyz_uncensored">Flirtyz Uncensored</string>
    <string name="welcome_the_free_version">The Free Version</string>
    <string name="welcome_the_xxx_version">XXX Version</string>
    <string name="welcome_a_humble_request">A humble request: </string>
    <string name="welcome_a_humble_request_description">Please don’t repurpose this PSD or its contents as your own. If you like it and use it, share about it. Most importantly, use it to pitch, design and build amazing application. If you would like to thank me, Please give us one share. </string>


    <string name="suggestion_title">Suggestion</string>
    <string name="login_title">Login</string>
    <string name="profile_title">Profile</string>
    <string name="favorite_title">Favorite</string>
    <string name="recent_title">Recent</string>
    <string name="title_activity_special">Special</string>
    <string name="title_activity_categories">Unlock more</string>
    <string name="sugesstion_description">Have and idea for an awsome emoji? Tell us your thoughts below and have a chance to see your emoji added to our Flirtyz Family</string>
    <string name="suggestion_idea_box">Idea Box</string>
    <string name="suggestion_send">SEND</string>
    <string name="suggetst_flirtyz">Suggest a Flirtyz</string>
    <string name="send_to">Share Emoji to</string>
    <string name="remove">Remove</string>

    <string name="full_name">FullName</string>
    <string name="user_name">UserName</string>

    <string name="user_online">Online</string>
    <string name="user_offline">Offline</string>

    <string name="follow_user">FOLLOW</string>
    <string name="checkout_message"> How to purchase the Paid In App Emojis. In order
    to receive your download link in a phone text to
    the number you enter on the payment page.</string>

    <string name="checkout_follow">Please follow the directions below</string>

    <string name="checkout_message2">\n 1. Click on the Make Payment Button. \n\n 2. Fill out the credit card form. \n\n 3. Enter your phone number to receive the download link \n\n 4. You will receive a text message to your mobile phone \n with a link to receive the uncensored Flirtyz App.</string>



    <string name="posts_label">posts</string>
    <string name="followers_label">followers</string>
    <string name="following_label">following</string>

    <string name="no_post">User has no posts</string>


    <string name="Username">Username</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Get Started!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
