<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingHorizontal="10dp"
    android:layout_height="match_parent"
    tools:context=".activity.Register">


        <TextView
            android:id="@+id/backRegister"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:text="Back"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>


<TextView
    android:layout_width="match_parent"
    android:text="Sign up"
    android:layout_marginTop="15dp"
    android:textColor="@color/black"
    android:textSize="52sp"
    android:textStyle="bold"
    android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="Please fill information to create an \naccount and sign up tp continuew"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/FirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textField"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:inputType="text"
                    android:paddingStart="5dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/LastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_last"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:paddingStart="5dp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailUser"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:paddingStart="5dp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_register"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:paddingStart="5dp" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ConfirmPassword"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:paddingStart="5dp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_signup"
                android:text="@string/Register"
                android:textAppearance="@style/TextStyle"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="I already have an account?"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/Login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />


            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>