<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="10dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.MyLogin">


        <TextView
            android:id="@+id/back"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:text="Back"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:text="@string/Login"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="52sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="Enter your email address and \npassword to access your account"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/Email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:paddingStart="5dp"
            android:background="@color/white"
            android:layout_height="80dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:paddingStart="5dp"
            android:background="@color/white"
            android:layout_height="80dp"
            android:inputType="textPassword"
            />



    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:textSize="18sp"
        android:text="Forgot Password"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextStyle"
        android:background="@drawable/btn_signup"
        android:text="@string/Login"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/SignUp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>