<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CheckoutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/back"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/makepayment"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios"
            app:title="Checkout" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/ic_baseline_lock_24"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imb"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginLeft="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/emojigroup" />


            </FrameLayout>


            <!--            <Button-->
            <!--                android:layout_width="200dp"-->
            <!--                android:layout_height="60dp"-->
            <!--                android:layout_marginStart="20dp"-->
            <!--                android:layout_marginTop="15dp"-->
            <!--                android:layout_marginEnd="20dp"-->
            <!--                android:background="@drawable/btn_login"-->
            <!--                android:onClick="Action"-->
            <!--                android:text="PURCHASE $2.99"-->
            <!--                android:textAppearance="@style/TextStyle"-->
            <!--                android:textColor="@color/white"-->
            <!--                android:textSize="20sp" />-->

            <LinearLayout
                android:id="@+id/LinearLayout04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="50dp"
                    android:layout_weight="1"
                    android:text="Flirtyz Group Name"
                    android:textColor="@color/black">

                </TextView>

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="30dp"

                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:text="By: Creators Name"
                    android:textColor="@color/red">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:text="InApp Fee: $1.99"
                    android:textColor="@color/black">

                </TextView>

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="20dp"

                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:text="Total Fee: $1.99"

                    android:textColor="@color/bright_sun">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/Button02"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/arrow_shape"

                    android:text="Cancel"
                    android:textColor="@color/black">

                </Button>

                <Button
                    android:id="@+id/Button03"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_signup"
                    android:text="Check Out">

                </Button>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/checkout_follow"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/checkout_message"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/checkout_message2"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/ic_baseline_lock_24"

                    android:visibility="gone" />


            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/ic_baseline_lock_24"

                    android:visibility="gone" />

            </FrameLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
